# constraint-closure-diagnostics

./: .gitignore  FINAL_CONFIRMATION.md  LICENSE  PUBLISH_CHECKLIST.md  README.md  RELEASE_AUDIT.md  RELEASE_CHECKLIST.md  RELEASE_VERIFICATION.md  REPO_AUDIT_SUMMARY.md  pyproject.toml
docs/: REPRODUCIBILITY_REPORT.md  SAFETY_BOUNDARY.md  SHAREABLE_PROFILE.md
paper/: ASSUMPTIONS_AND_SCOPE.md  README.md  rh_constraint_diagnostic.tex
runs/release_20260113_225750/: BUNDLE_REPORT.md
runs/release_20260113_225750/83c751c958966979/: RELEASE_REPORT.md  config.json  manifest.json  metrics.json
runs/release_20260113_225750/85568e827299b531/: RELEASE_REPORT.md  config.json  manifest.json  metrics.json
runs/release_20260113_225750/sweep_20260113_225758/: sweep_results_partial.json
runs/release_20260113_225750/sweep_20260113_225759/: SWEEP_REPORT.md  summary.txt  sweep_results.json
src/vfd_dash/: __init__.py  app.py  cli.py  runner.py  state.py  sweep.py
src/vfd_dash/bridge/: __init__.py  bn_negations.py  bridge_axiom.py  projection.py  reference_data.py
src/vfd_dash/constraints/: __init__.py  families.py  ladder.py
src/vfd_dash/core/: __init__.py  config.py  hashing.py  logging.py
tests/: test_bridge_controls.py  test_bundle.py  test_export_replay.py  test_invariants.py  test_phase15.py  test_primes.py  test_reports.py  test_run_completion.py  test_spec_compliance.py  test_spectrum_backends.py  test_stability.py  test_weyl_orbit_size.py
tools/: audit_release_bundle.py  hash_outputs.py  sync_paper_figures.py  verify_release_metrics.py
(+46 files in other folders)
