[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constraint-closure-diagnostics"
version = "1.0.0"
description = "Constraint-closure diagnostic framework with RH-motivated spectral case study"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Lee Smart", email = "contact@vibrationalfielddynamics.org"}
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.6.0",
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "dash>=2.0.0",
    "dash-bootstrap-components>=1.0.0",
    "pydantic>=1.9.0",
    "pytest>=6.0.0",
    "networkx>=2.6.0",
    "pyarrow>=6.0.0",
    "mpmath>=1.2.0",
    "sympy>=1.9",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
vfd-dashboard = "vfd_dash.app:main"
vfd-headless = "scripts.run_headless:main"
rhdiag = "vfd_dash.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
